--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
             <p><a href="https://www.gartner.com/en/topics/generative-ai">Gartner: Generative AI</a></p>
         </div>
 
-        <footer>
-            <p>By Meghana Naidu</p>
-        </footer>
+  <footer>
+    <p>© 2024 Meghana Naidu. All rights reserved.</p>
+</footer>
+
     </div>
 
     <script>
